fix ui spacing

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -4,7 +4,7 @@
 }
 h1 {
   color: #2c3e50;
-  margin-bottom: 30px;
+  margin: 100px 0 30px 0;
 }
 .stats-grid {
   display: grid;
