--- a/src/app/components/patient-details/patient-details.component.scss
+++ b/src/app/components/patient-details/patient-details.component.scss
@@ -1,6 +1,6 @@
 .patient-details-container {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 100px auto;
 }
 .header {
   display: flex;
