--- a/src/app/components/patient-list/patient-list.component.scss
+++ b/src/app/components/patient-list/patient-list.component.scss
@@ -1,6 +1,6 @@
 .patient-list-container {
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 100px auto;
 }
 .header {
   display: flex;
